# pinballnx

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.md  README.md
Box2D/: CMakeLists.txt
collisionshapes/: README.md  imgtopoints.sh  imgtotris.sh  topoints.py  totris.py
collisionshapes/earcut/: README.md  earcut.hpp  main.cpp
collisionshapes/poly2tri/: .lock-wafbuild  README
collisionshapes/poly2tri/.waf-1.6.2-e067f3811b710f6de44f50177143d064/waflib/: Build.py  Node.py  TaskGen.py
collisionshapes/poly2tri/.waf-1.6.2-e067f3811b710f6de44f50177143d064/waflib/Tools/: c_config.py  clang.py  clangxx.py  errcheck.py  fc.py  flex.py  python.py  qt4.py  vala.py
collisionshapes/poly2tri/testbed/: main.cc
collisionshapes/poly2tri/waf-1.6.2-e067f3811b710f6de44f50177143d064/waflib/: Context.py  Task.py
collisionshapes/poly2tri/waf-1.6.2-e067f3811b710f6de44f50177143d064/waflib/Tools/: c_osx.py  ccroot.py  fc_config.py  gcc.py  (+3 more)
examples/pinball/: CMakeLists.txt
examples/pinball/source/: main.cpp  pinball.cpp  pinball.h  table.cpp  util.cpp  util.h
games/pinball/: CMakeLists.txt
games/pinball/source/: balllock.cpp  balllock.h  bumper.cpp  bumper.h  conveyor.cpp  conveyor.h  flipper.cpp  flipper.h  gtarget.cpp  gtarget.h  infoscreen.cpp  infoscreen.h  kicker.cpp  kicker.h  layer.cpp  layer.h  main.cpp  optwall.cpp  optwall.h  pinball.cpp  pinball.h  plunger.cpp  plunger.h  ptarget.cpp  ptarget.h  ramp.cpp  ramp.h  scoreboard.cpp  scoreboard.h  spinner.cpp  spinner.h  table.cpp  table.h  trigger.cpp  trigger.h  util.cpp  util.h  wheel.cpp  wheel.h
